# project_lp

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
content/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
content/migrations/: 0001_initial.py  0002_alter_postreaction_object_id.py  0002_alter_tag_author.py  0002_comment_deleted.py  0003_post.py
content/services/: view_services.py
content/tests/: test_forms.py  test_models.py  test_views.py
followers/: admin.py  models.py  urls.py  views.py
followers/migrations/: 0001_initial.py  0002_alter_follower_recipient_alter_follower_sender.py
profiles/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_options.py  0003_profile_used.py
profiles/services/: model_services.py
profiles/tests/: test_forms.py  test_models.py  test_views.py
project_lp/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/content/: add_or_edit_post.html  archived_posts.html  delete_post.html  home.html  master.html  post_detail.html  posts_by_tag.html  profile_posts_list.html
templates/profiles/: add_profile.html  all_profiles.html  delete_profile.html  edit_profile.html  login.html  profiles_list.html  register.html
