[tool.poetry]
name = "project_lp"
version = "0.1.0"
description = "Дипломный проект курса Learn Python"
authors = ["Chyrets <uladzislawchyrets@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
Pillow = "^8.4.0"
django-mptt = "^0.13.4"
django-debug-toolbar = "^3.2.4"

[tool.poetry.dev-dependencies]
coverage = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
